--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
