socket connection added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
