--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
@@ -24,6 +25,7 @@
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
