--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
