--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "heroicons": "^2.0.18",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
