--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "slick-carousel": "^1.8.1",
